--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                   <div class="subheading mb-5"> NEPAL ·&nbsp; ANJAN2052@GMAIL.COM</div>
                     <p class="lead mb-5">This is currently under maintainance. You can visit my social profile or my blog site from below.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="www.linkedin.com/in/anjandhungana"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/anjandhungana"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/anjan2052"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="twitter.com/anjandhungana"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://twitter.com/anjandhungana"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
-						<a class="social-icon" href="anjandhungana.wordpress.com"><i class="fab fa-wordpress" aria-hidden="true"></i></a>
+						<a class="social-icon" href="https://anjandhungana.wordpress.com"><i class="fab fa-wordpress" aria-hidden="true"></i></a>
 					</div>
 					
 					
