--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                     </h1>
                   <div class="subheading mb-5"> NEPAL ·&nbsp; ANJAN2052@GMAIL.COM</div>
-                  <p class="lead mb-5">This site is currently under maintainance. You can visit my social profile or my blog site from below.</p>
+                  <p class="lead mb-5">You're in my landing page and this site is under maintainance. You can visit my social profile or my blog site from below.</p>
                   <div class="social-icons">
 						
                         <a class="social-icon" href="https://www.linkedin.com/in/anjandhungana"><i class="fab fa-linkedin-in"></i></a>
